--- a/todo
+++ b/todo
@@ -2,3 +2,5 @@ check if averager actually uses everything in the last 24 h
 
 clear old meta data (meta data , not meta data analysis results)
 clear old comments
+
+skip board catalogs if they 502 or timeout and reduce the board weight to 75% or so instead
